2010-05-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-24
        * Revise ADC maximum slice plots again.

2010-04-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-23
        * Better eta/phi plots.

2010-04-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-22
        * Add tool to give threshold names for bin labels.

2010-03-25  Sky French <sfrench@hep.phy.cam.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-21
	* Fixed compilation warnings and pedestal plots

2010-03-23  Sky French <sfrench@hep.phy.cam.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-20
	* Added pedestal monitoring plots
	* Changed LUT EventMismatch Summary plot x-axis labels

2010-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-19
        * Fix unchecked StatusCodes.

2010-03-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-18
        * Simplify PPrMon::recTime()

2010-03-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-17
        * Stop forwarding of PPM spare channel errors to global overview
          plot.
        * Re-order error bits from ROD status word 1.

2010-03-07  Sky French <sfrench@hep.phy.cam.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-16
	* Add comparison of simulated LUT with data (PPMSimBSMon)
	* Removed PPrPerfMon

2010-02-23  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-15
        * Add monitoring of spare PPM channels.

2010-02-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-14
        * Move PPrMon to ESDtoAOD step.

2010-02-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-13
        * Mods for TrigT1CaloByteStream-00-08-02 and move some tools
          to ESDtoAOD step on Tier0.  Global plot moved to separate
          tool as needed in both steps.
