@@ -1,3 +1,7 @@
+2010-05-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-06-25
+        * Shrink eta bins to same size.
+
 2010-05-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-06-24
         * Revise ADC maximum slice plots again.
